<resources>
    <string name="app_name">RetrofitThreadAsynctask</string>
    <string name="email">email</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="repassword">repassword</string>
    <string name="register">Register</string>
    <string name="dont_have_an_account">Don\'t have an account? </string>
    <string name="gender">Gender:</string>
    <string name="username">username</string>
    <string name="phonenumber">Phone number</string>
    <string name="address">Address</string>
</resources>