<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"

    tools:context=".ui.RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_60sdp"
            app:cardCornerRadius="@dimen/_15sdp"
            app:cardElevation="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:orientation="vertical"
                android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_gravity="center"
                android:outlineAmbientShadowColor="@color/colorPrimary"
                app:srcCompat="@drawable/login_user" />

            <EditText
                android:layout_marginTop="@dimen/_20sdp"
                android:id="@+id/et_email_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bg"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="@dimen/_15sdp" />

                <EditText
                    android:id="@+id/et_password_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/edit_text_bg"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/_15sdp" />

                <EditText
                    android:id="@+id/et_repassword_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/edit_text_bg"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/repassword"
                    android:inputType="textPassword"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/_15sdp" />

                <EditText
                    android:layout_marginTop="@dimen/_10sdp"
                    android:id="@+id/username_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:drawableLeft="@drawable/ic_user"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/_15sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:text="@string/gender" />

                    <RadioGroup
                        android:id="@+id/radioGroupGenderReg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioButtonNamReg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Nam" />

                        <RadioButton
                            android:id="@+id/radioButtonNuDetail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Nữ" />
                    </RadioGroup>
                </LinearLayout>

                <EditText
                    android:layout_marginTop="@dimen/_10sdp"
                    android:id="@+id/phone_number_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:drawableLeft="@drawable/ic_phone_number"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/phonenumber"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/_15sdp" />
                <EditText
                    android:layout_marginTop="@dimen/_10sdp"
                    android:id="@+id/address_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:drawableLeft="@drawable/ic_address"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/address"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/_15sdp" />

                <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBarLogin"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/button_bg"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</ScrollView>